2007-04-24  Marek Habersack  <mhabersack@novell.com>

            * CapabilitiesLoader.cs: Hashtables used as property containers
            should not be case-insensitive as we now preload the property
            hashes with default properties, to make the code work in case
            browscap.ini is broken or missing. Instead, the keys are
            lower-cased and trimmed before indexing the Hashtable.
            Added all the missing capabilities to the defaultCaps Hashtable.
            The returned Hashtable is not reversed in GetCapabilities anymore
            - it might make the code faster, but it also makes it mismatch
            browsers (e.g. Firefox 2.0 is mismatched for Mozilla 1.8).
            All of the above fixes bug #81437.

2007-04-22 Joshua Tauberer <jit@occams.info>
 
 	* HttpParamsCollection.cs: Fix IndexOutOfRangeException.

2007-04-19  Miguel de Icaza  <miguel@novell.com>

	* BaseParamsCollection.cs (Get (string)): Call LoadInfo here to
	fix #81385

2007-04-17 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpException.cs: used GetBaseException() instead InnerException.

2007-04-17 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpException.cs: shows message of InnerException in head of Page.

2007-04-17 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpException.cs: fixed generated HTML formating.

2007-04-17 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpContext.cs: GetGlobalResourceObject, GetLocalResourceObject
	use case-insensitive ResourceManager

2007-04-15  Marek Habersack  <mhabersack@novell.com>

	* VirtualPathUtility.cs: converted to LF line endings and set the
	svn:eol-style property to 'native'

2007-04-13  Marek Habersack  <mhabersack@novell.com>

	* SiteMap.cs: try to look up the current map node in providers
	other than the current one. Patch from Mike Morano
	<mmorano@mikeandwan.us>. Fixes bug #81366. 

2007-04-12  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: fixed Params property to be lazy initialzation